added gravity system for player to turn gravity 360°

--- a/Project_TalesOfSpirits.csproj
+++ b/Project_TalesOfSpirits.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\GravityArea\GravityArea.cs" />
     <Compile Include="Assets\Player\Player.cs" />
     <Compile Include="Assets\Scenes\fps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
